# rust-cli

./: README.md  test.sh
01_hello/: Cargo.toml
02_echor/: Cargo.toml  mk_outs.sh
02_echor/src/: main.rs
02_echor/tests/: cli.rs
03_catr/: Cargo.toml  mk_outs.sh
03_catr/src/: main.rs
04_headr/: Cargo.toml
04_headr/src/: main.rs
05_wcr/: Cargo.toml
05_wcr/src/: main.rs
05_wcr/tests/expected/: all.c.out  all.cl.out  all.l.out  all.lwm.out  all.m.out  all.ml.out  all.out  all.w.out  all.wc.out  all.wl.out  all.wm.out
06_uniqr/: Cargo.toml
06_uniqr/src/: main.rs
06_uniqr/tests/expected/: atlamal.txt.stdin.c.out  fox.txt.stdin.c.out
07_findr/: Cargo.toml
07_findr/src/: main.rs
07_findr/tests/expected/: name_csv_mp3.txt  path1.txt  path_a.txt  path_a_b_d.txt  path_d.txt  type_d.txt  type_f.txt  type_f_l.txt  type_f_path_a.txt
util/ascii/: Cargo.toml
util/ascii/src/: main.rs
util/ascii/tests/: cli.rs
util/biggie/: Cargo.toml  README.md  sobig.txt
util/biggie/src/: main.rs
