[package]
name = "catr"
version = "0.1.0"
edition = "2024"
authors = [ "Luna Lancer <2756865549@qq.com>" ]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
rand = "0.8.5"
